Se acabo el apartado del section hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Hero from "../components/hero/Hero.astro";
 ---
 
 <Layout title="Colchones Romantic">
-	<h2>Rest content</h2>
+	<Hero />
 </Layout>
