--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<Header client:load />
-		<main>
+		<main class="w-full">
 			<slot />
 		</main>
 	</body>
