Se acabo el section infoCards

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/hero/Hero.astro";
+import InfoCards from "../components/mainCards/InfoCards.astro";
+import Cards from "../components/cards/Cards.astro";
 ---
 
 <Layout title="Colchones Romantic">
 	<Hero />
+	<InfoCards />
+	<Cards />
 </Layout>
