--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/Mattress-ico.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<link
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 	</head>
 	<body>
 		<Header client:load />
-		<main class="w-full">
+		<main class="w-full flex flex-col gap-20">
 			<slot />
 		</main>
 	</body>
