Se acabo el overlay

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/hero/Hero.astro";
 import InfoCards from "../components/mainCards/InfoCards.astro";
 import Cards from "../components/cards/Cards.astro";
+import HeroBody from "../components/hero/HeroBody.astro";
+import Overlay from "../components/overlay/Overlay.astro";
 ---
 
 <Layout title="Colchones Romantic">
 	<Hero />
 	<InfoCards />
 	<Cards />
+	<HeroBody />
+	<Overlay />
 </Layout>
