--- a/src/components/overlay/Overlay.astro
+++ b/src/components/overlay/Overlay.astro
@@ -1,11 +1,11 @@
-<section class="flex flex-col gap-6">
+<section class="flex flex-col gap-10">
 	<h2
-		class="text-center text-fontHero text-[1.2rem] md:text-[1.8rem] font-bold"
+		class="text-center text-fontHero text-[1.2rem] md:text-[1.6rem] font-bold w-11/12 max-w-[950px] mx-auto"
 	>
 		Conoce cada detalle de tus productos favoritos y haz de tu dormitorio tu
 		lugar favorito.
 	</h2>
-	<div class="h-[350px] xl:h-[600px]">
+	<div class="h-[350px] xl:h-[550px]">
 		<img
 			src="./imgOverlay-webp.webp"
 			alt=""
