Se termino la pagina principal

--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -1,1 +1,18 @@
-<h1>Footer</h1>
+---
+import Social from "./contain/Social.astro";
+import About from "./contain/About.astro";
+import Payment from "./contain/Payment.astro";
+---
+
+<section class="w-full mt-16 flex flex-col gap-6">
+	<div
+		class="w-11/12 max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-[1fr_1.5fr_1fr] gap-12 p-6"
+	>
+		<Social />
+		<About />
+		<Payment />
+	</div>
+	<p class="text-center text-gray-600 p-8">
+		© 2024 Grupo DevCrazy. Todos los derechos reservados
+	</p>
+</section>
