--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,4 +37,15 @@ const { title } = Astro.props;
 	html {
 		font-family: system-ui, sans-serif;
 	}
+	.burger-open {
+		overflow: hidden;
+	}
 </style>
+
+<script>
+	const burger = document.querySelector(".burger");
+
+	burger?.addEventListener("change", () => {
+		document.body.classList.toggle("burger-open");
+	});
+</script>
