--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -3,7 +3,7 @@
 ---
 
 <section
-	class="w-full bg-bgCards sm:p-4 p-3 h-[500px] flex justify-center items-center"
+	class="w-full bg-bgCards sm:p-4 p-3 h-[500px] flex justify-center items-center mt-[90px]"
 >
 	<div
 		class="sm:w-11/12 w-full mx-auto grid grid-cols-1 lg:grid-cols-[1fr_1.2fr] max-w-7xl gap-6"
