Cambio de rutas de las imagenes a relativas

--- a/src/components/footer/contain/Social.astro
+++ b/src/components/footer/contain/Social.astro
@@ -1,9 +1,11 @@
 <div class="w-full flex flex-col gap-10 items-center lg:items-start">
-	<img
-		src="logoRomantib-webp.webp"
-		alt="Romantic logo"
-		class="w-full max-w-[250px]"
-	/>
+	<a href="/">
+		<img
+			src="/src/assets/img/logoRomantib-webp.webp"
+			alt="Romantic logo"
+			class="w-full max-w-[250px]"
+		/>
+	</a>
 	<p class="text-sm text-gray-500 lg:text-left text-center">
 		COLCHONES ROMANTIC, te da la bienvenida a su tienda online.
 	</p>
