--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -29,8 +29,8 @@
 			>
 			</div>
 			<img
-				src="./imgHero.png"
-				alt=""
+				src="/src/assets/img/imgHero.png"
+				alt="Imagen Hero"
 				class="relative z-[2] w-full max-w-[550px] max-h-[550px] h-full min-w-[450px]"
 			/>
 		</div>
