--- a/src/components/hero/HeroBody.astro
+++ b/src/components/hero/HeroBody.astro
@@ -24,7 +24,7 @@
 			>
 		</div>
 		<img
-			src="./item-4-wp.webp"
+			src="/src/assets/img/item-4-wp.webp"
 			alt=""
 			class="w-full max-w-[450px] block mx-auto"
 		/>
