--- a/src/components/cards/Card.astro
+++ b/src/components/cards/Card.astro
@@ -3,7 +3,13 @@ const { image, alt, info, stock, price } = Astro.props;
 ---
 
 <div class="bg-bgCards flex flex-col items-center p-3 gap-4 rounded-sm">
-	<img src={`./item-${image}.png`} alt={alt} class="object-contain" />
+	<a href="/producto/id">
+		<img
+			src={`/src/assets/img/item-${image}.png`}
+			alt={alt}
+			class="object-contain"
+		/>
+	</a>
 	<p class="text-lg text-center h-[60px]">{info}</p>
 	<div class="flex justify-evenly items-center w-full">
 		<a
