--- a/src/components/cards/Cards.astro
+++ b/src/components/cards/Cards.astro
@@ -1,14 +1,16 @@
 ---
 import Card from "./Card.astro";
 import { cards } from "./cards.js";
+
+const { title, subtitle } = Astro.props;
 ---
 
 <section class="w-11/12 max-w-7xl mx-auto flex flex-col gap-8">
 	<div class="w-full flex flex-col gap-3">
 		<h3 class="text-3xl font-bold text-fontHero text-center">
-			Aprovecha nuestras ofertas
+			{title}
 		</h3>
-		<p class="text-center text-font">Lo mas vendido</p>
+		<p class="text-center text-font">{subtitle}</p>
 	</div>
 	<div
 		class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4"
@@ -18,7 +20,7 @@ import { cards } from "./cards.js";
 				<Card
 					image={card.image}
 					alt={card.alt}
-					info={card.info}
+					info={card.title}
 					stock={card.stock}
 					price={card.price}
 				/>
