--- a/src/components/hero/HeroBody.astro
+++ b/src/components/hero/HeroBody.astro
@@ -19,7 +19,7 @@
 			</p>
 			<a
 				href="#"
-				class="bg-bgButton text-white py-2 px-4 rounded w-max flex items-center transition-all ease-in-out duration-200 hover:bg-bgButtonHover"
+				class="bg-bgButton text-white py-2 px-4 rounded-md w-max flex items-center transition-all ease-in-out duration-200 hover:bg-bgButtonHover"
 				>Comenzar <i class="bx bx-right-arrow-alt ml-1"></i></a
 			>
 		</div>
