--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Suscribe from "../components/suscribe/Suscribe.jsx";
 <Layout title="Colchones Romantic">
 	<Hero />
 	<InfoCards />
-	<Cards />
+	<Cards title="Aprovecha nuestras ofertas" subtitle="Los mas vendidos" />
 	<HeroBody />
 	<Overlay />
 	<Suscribe client:load />
