--- a/src/components/product/Product.astro
+++ b/src/components/product/Product.astro
@@ -11,7 +11,7 @@ import Info from "../../components/product/info/Info.jsx";
 		<img
 			src="/src/assets/img/item-1-wp.webp"
 			alt="Colchon producto"
-			class="w-full object-contain"
+			class="w-full object-contain aspect-[1.5/1]"
 		/>
 	</div>
 	{
