--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,10 @@ const { title } = Astro.props;
 			<slot />
 		</main>
 		<Footer />
+		<script
+			src="https://kit.fontawesome.com/812c8ee19a.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
 
