Se corrigio error con los botones add and minus

--- a/src/components/cards/Cards.astro
+++ b/src/components/cards/Cards.astro
@@ -1,6 +1,6 @@
 ---
 import Card from "./Card.astro";
-import { cards } from "./cards.js";
+import { cards } from "../../db/cards.js";
 
 const { title, subtitle } = Astro.props;
 ---
