--- a/src/components/product/Product.astro
+++ b/src/components/product/Product.astro
@@ -1,6 +1,6 @@
 ---
 //Fake data for testing
-import { cards } from "../../db/cards.js";
+import { cards } from "../../db/db.js";
 import Info from "../../components/product/info/Info.jsx";
 ---
 
