Se agrego una ruta para allProducts

--- a/src/components/hero/HeroBody.astro
+++ b/src/components/hero/HeroBody.astro
@@ -18,7 +18,7 @@
 				espalda
 			</p>
 			<a
-				href="#"
+				href="/productos"
 				class="bg-bgButton text-white py-2 px-4 rounded-md w-max flex items-center transition-all ease-in-out duration-200 hover:bg-bgButtonHover"
 				>Comenzar <i class="bx bx-right-arrow-alt ml-1"></i></a
 			>
