--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -16,7 +16,7 @@
 			</h1>
 			<p class="text-font">Descubra nuestra colección mas reciente</p>
 			<a
-				href="#"
+				href="/productos"
 				class="bg-bgButton text-white py-2 px-4 rounded-md w-max flex items-center transition-all ease-in-out duration-200 hover:bg-bgButtonHover"
 				>Ver colección <i class="bx bx-right-arrow-alt ml-1"></i></a
 			>
