Se le agrego un aspect ratio a las imagenes

--- a/src/components/cards/Card.astro
+++ b/src/components/cards/Card.astro
@@ -9,7 +9,7 @@ const { image, alt, info, stock, price } = Astro.props;
 		<img
 			src={`/src/assets/img/item-${image}.png`}
 			alt={alt}
-			class="object-contain"
+			class="object-contain aspect-[1.5/1]"
 		/>
 	</a>
 	<p class="text-[1rem] font-[500] text-center h-[60px]">{info}</p>
