--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -31,7 +31,7 @@
 			<img
 				src="/src/assets/img/imgHero.png"
 				alt="Imagen Hero"
-				class="relative z-[2] w-full max-w-[550px] max-h-[550px] h-full min-w-[450px]"
+				class="relative z-[2] w-full max-w-[550px] max-h-[550px] h-full min-w-[450px] aspect-[1.5/1]"
 			/>
 		</div>
 	</div>
