Se agrego un metodo de pago y de checkout

--- a/src/components/footer/contain/About.astro
+++ b/src/components/footer/contain/About.astro
@@ -2,7 +2,7 @@
 	class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full gap-12 md:gap-4"
 >
 	<div class="flex flex-col gap-10 items-center lg:items-start">
-		<h2 class="text-2xl text-neutral-700">Apoyo</h2>
+		<h2 class="text-xl text-neutral-700">Apoyo</h2>
 		<div class="flex flex-col gap-4 text-gray-500 text-sm">
 			<a
 				href="#"
@@ -22,7 +22,7 @@
 		</div>
 	</div>
 	<div class="flex flex-col gap-10 items-center lg:items-start">
-		<h2 class="text-2xl text-neutral-700">Compañia</h2>
+		<h2 class="text-xl text-neutral-700">Compañia</h2>
 		<div class="flex flex-col gap-4 text-gray-500 text-sm">
 			<a
 				href="#"
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 	<div class="flex flex-col gap-10 items-center lg:items-start">
-		<h2 class="text-2xl text-neutral-700">Comercio</h2>
+		<h2 class="text-xl text-neutral-700">Comercio</h2>
 		<div class="flex flex-col gap-4 text-gray-500 text-sm">
 			<a
 				href="#"
