--- a/src/components/footer/contain/Payment.astro
+++ b/src/components/footer/contain/Payment.astro
@@ -1,5 +1,5 @@
 <div class="w-full flex flex-col gap-8 items-center lg:items-start">
-	<h2 class="text-2xl text-neutral-700">Pagos Aceptados</h2>
+	<h2 class="text-xl text-neutral-700">Pagos Aceptados</h2>
 	<div class="flex gap-4">
 		<i class="bx bxl-mastercard"></i>
 		<i class="bx bxl-visa"></i>
