Se termino el apartado success and error

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,6 +40,9 @@ const { title } = Astro.props;
 	.burger-open {
 		overflow: hidden;
 	}
+	body {
+		scroll-behavior: smooth;
+	}
 </style>
 
 <script>
