Se agrego un viewTransition a las pages

--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -4,7 +4,7 @@ import About from "./contain/About.astro";
 import Payment from "./contain/Payment.astro";
 ---
 
-<section class="w-full mt-16 flex flex-col gap-6">
+<section class="w-full mt-16 flex flex-col gap-6" id="footer">
 	<div
 		class="w-11/12 max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-[1fr_1.5fr_1fr] gap-12 p-6"
 	>
