--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/header/Header.jsx";
 import Footer from "../components/footer/Footer.astro";
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -18,6 +19,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/Mattress-ico.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 		<link
 			href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
 			rel="stylesheet"
@@ -29,26 +31,25 @@ const { title } = Astro.props;
 			<slot />
 		</main>
 		<Footer />
-	</body>
+		<style is:global>
+			html {
+				font-family: system-ui, sans-serif;
+			}
+			.burger-open {
+				overflow: hidden;
+			}
+			:root {
+				scroll-behavior: smooth;
+			}
+		</style>
+
+		<script>
+			//* Burger
+			const burger = document.querySelector(".burger");
+
+			burger?.addEventListener("change", () => {
+				document.body.classList.toggle("burger-open");
+			});
+		</script>
+	</body><!--* Globales -->
 </html>
-
-<!--* Globales -->
-<style is:global>
-	html {
-		font-family: system-ui, sans-serif;
-	}
-	.burger-open {
-		overflow: hidden;
-	}
-	body {
-		scroll-behavior: smooth;
-	}
-</style>
-
-<script>
-	const burger = document.querySelector(".burger");
-
-	burger?.addEventListener("change", () => {
-		document.body.classList.toggle("burger-open");
-	});
-</script>
