Se cambio al ruta de las imagenes

--- a/src/components/cards/Card.astro
+++ b/src/components/cards/Card.astro
@@ -7,7 +7,7 @@ const { image, alt, info, stock, price } = Astro.props;
 >
 	<a href="/producto/id">
 		<img
-			src={`/src/assets/img/item-${image}.png`}
+			src={`/img/item-${image}.png`}
 			alt={alt}
 			class="object-contain aspect-[1.5/1]"
 		/>
