--- a/src/components/carrito/Productos/Producto.astro
+++ b/src/components/carrito/Productos/Producto.astro
@@ -6,7 +6,7 @@ import Buttons from "../../Buttons.jsx";
 	class="flex flex-col sm:flex-row gap-4 items-center justify-evenly text-sm flex-1"
 >
 	<img
-		src="/src/assets/img/item-1-wp.webp"
+		src="/img/item-1-wp.webp"
 		class="w-full max-w-[200px] sm:max-w-[80px] object-contain aspect-[1/1.5]"
 		alt="producto"
 	/>
