--- a/src/components/footer/contain/Social.astro
+++ b/src/components/footer/contain/Social.astro
@@ -1,7 +1,7 @@
 <div class="w-full flex flex-col gap-10 items-center lg:items-start">
 	<a href="/">
 		<img
-			src="/src/assets/img/logoRomantib-webp.webp"
+			src="/img/logoRomantib-webp.webp"
 			alt="Romantic logo"
 			class="w-full max-w-[250px]"
 		/>
