--- a/src/components/product/Product.astro
+++ b/src/components/product/Product.astro
@@ -9,7 +9,7 @@ import Info from "../../components/product/info/Info.jsx";
 >
 	<div class="p-6">
 		<img
-			src="/src/assets/img/item-1-wp.webp"
+			src="/img/item-1-wp.webp"
 			alt="Colchon producto"
 			class="w-full object-contain aspect-[1.5/1]"
 		/>
