--- a/src/components/overlay/Overlay.astro
+++ b/src/components/overlay/Overlay.astro
@@ -7,7 +7,7 @@
 	</h2>
 	<div class="h-[350px] xl:h-[550px]">
 		<img
-			src="/src/assets/img/imgOverlay-webp.webp"
+			src="/img/imgOverlay-webp.webp"
 			alt=""
 			class="h-full w-full object-fill lg:object-cover"
 		/>
