--- a/src/pages/carrito/success.astro
+++ b/src/pages/carrito/success.astro
@@ -7,11 +7,7 @@ import Layout from "../../layouts/Layout.astro";
 		class="w-11/12 max-w-7xl mx-auto lg:min-h-screen flex justify-center items-center"
 	>
 		<div class="text-center flex flex-col items-center gap-4 md:p-8">
-			<img
-				src="/src/assets/img/success.png"
-				alt=""
-				class="w-full mx-auto max-w-[250px]"
-			/>
+			<img src="/img/success.png" alt="" class="w-full mx-auto max-w-[250px]" />
 			<h1 class="text-3xl font-bold">Gracias por comprar</h1>
 			<p class="text-font">
 				Su pedido se realizó correctamente y ahora se está procesando.
